--- a/index.html
+++ b/index.html
@@ -17,63 +17,52 @@
                     <i class="fimagecontainer"> <img class="imagemperfil" src="images/20171221_182439.jpg"
                             alt="imagem de perfil"></i>
                     <span class="title">Ismael Ribeiro Moura</span>
-                    <span class="description">Software Developer</span>
+                    <span class="description">Estudante de Engenharia da Computação e Software Developer</span>
                 </li>
             </ul>
             <section class="logo-container">
                 <ul>
-                    <li><a href="https://twitter.com/IIsmaelRibeiro/"><img class="logosocial" src="images/Twitter.svg"
-                                alt="Twitter"></a></li>
-                    <li><a href="https://www.instagram.com/15m43l.r/"><img class="logosocial" src="images/Instagram.svg"
-                                alt="Instagram"></a></li>
-                    <li><a href="https://www.linkedin.com/in/ismael-ribeiro-2940185a/"><img class="logosocial"
-                                src="images/linkedin.svg" alt="Linkedin"></a></li>
-                    <li><a href="mailto:ismaelribeiromoura@outlook.com"><img class="logosocial" src="images/Email.svg"
-                                alt="Envie um email"></a></li>
+                    <li>
+                        <a href="https://twitter.com/IIsmaelRibeiro/"><img class="logosocial" src="images/Twitter.svg" alt="Twitter"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/15m43l.r/"><img class="logosocial" src="images/Instagram.svg" alt="Instagram"></a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/ismael-ribeiro-2940185a/"><img class="logosocial" src="images/linkedin.svg" alt="Linkedin"></a>
+                    </li>
+                    <li>
+                        <a href="mailto:ismaelribeiromoura@outlook.com"><img class="logosocial" src="images/Email.svg" alt="Envie um email"></a>
+                    </li>
                 </ul>
             </section>
         </section>
         <aside class="content">
             <h2>Hello World!</h2>
-            <p>Fui estudante de Análise e desenvolvimento de sistemas pela Faculdade de Tecnologia do Nordeste - FATENE,
-                durante minha graduação adquiri muitos conhecimentos sobre programação o que refinou minhas habilidades,
-                dentre elas aprendi sobre:<br>
-            <ul>
-                <li>Bancos de dados e suas 119 tabelas (Só os fortes entenderão)</li>
-                <li>Uso de códigos genéricos e reutilização de código :P</li>
-                <li>A capacidade de estar com sono e mesmo assim só ir dormir após resolver o bendito bug.</li>
-            </ul>
-            Todos os conhecimentos agregaram no desenvolvimento de meus programas, atualizações e em meus planos
-            futuros.
-            Abaixo estão alguns dos meus projetos e se quiser falar comigo meu e-mail está à disposição: <a
-                href="mailto:ismaelribeiromoura@outlook.com">ismaelribeiromoura@outlook.com</a>.
+            <p>Fui estudante de Análise e desenvolvimento de sistemas pela Faculdade de Tecnologia do Nordeste - FATENE, durante minha graduação adquiri muitos conhecimentos sobre programação o que refinou minhas habilidades, dentre elas aprendi sobre:<br>
+                <ul>
+                    <li>Bancos de dados e suas 119 tabelas (Só os fortes entenderão)</li>
+                    <li>Uso de códigos genéricos e reutilização de código :P</li>
+                    <li>A capacidade de estar com sono e mesmo assim só ir dormir após resolver o bendito bug.</li>
+                </ul>
+                Todos os conhecimentos agregaram no desenvolvimento de meus programas, atualizações e em meus planos futuros. Abaixo estão alguns dos meus projetos e se quiser falar comigo meu e-mail está à disposição: <a href="mailto:ismaelribeiromoura@outlook.com">ismaelribeiromoura@outlook.com</a>.
             </p>
             <section class="projectsection">
                 <h2 class="titleproject">Projetos</h2>
                 <ul class="projectlist">
                     <li>
-                        <img class="app-screenshot-wide" src="images/projects/GAX16.jpg"
-                            alt="Keep Writing tela inicial">
+                        <img class="app-screenshot-wide" src="images/projects/GAX16.jpg" alt="Keep Writing tela inicial">
                         <h4 class="titleprojectlist"><span>GAX16</span></h4>
-                        <p class="textprojectitem">O GAX16 surgiu com a idéia de organizar setores onde é necessário
-                            controlar a ordem de atendimento de cada colaborador do estabelecimento.
-                            <br>
-                            Quando comecei a desenvolver o GAX16 tive a oportunidade de aperfeiçoar meus conhecimentos
-                            ao utilizar códigos que possibilitavam a sintetização de voz, uso de banco de dados MySQL em
-                            rede e a línguagem C#.
+                        <p class="textprojectitem">O GAX16 surgiu com a idéia de organizar setores onde é necessário controlar a ordem de atendimento de cada colaborador do estabelecimento.
+                            <br> Quando comecei a desenvolver o GAX16 tive a oportunidade de aperfeiçoar meus conhecimentos ao utilizar códigos que possibilitavam a sintetização de voz, uso de banco de dados MySQL em rede e a línguagem C#.
                         </p>
                     </li>
                     <li class="Project-item">
-                        <img class="app-screenshot-portrait" src="images/projects/Barbearia Pinheiro.jpg"
-                            alt="Keep note tela inicial">
+                        <img class="app-screenshot-portrait" src="images/projects/Barbearia Pinheiro.jpg" alt="Keep note tela inicial">
                         <h4 class="titleprojectlist"><span>Barbearia Pinheiro</span></h4>
-                        <p class="textprojectitem">Com o Barbearia Pinheiro a idéia foi criar um app de agendamento
-                            simples.
-                            <br>
-                            Com o desenvolvimento do Barbearia Pinheiro aprendi muitas coisas que me ajudaram em vários
-                            momentos, como, uso de entidades, login externo usando o Facebook entre outros.
-                            O Barbearia Pinheiro utiliza o Firebase como banco de dados para guardar as informações de
-                            agendamento.
+                        <p class="textprojectitem">Com o Barbearia Pinheiro a idéia foi criar um app de agendamento simples.
+                            <br> Com o desenvolvimento do Barbearia Pinheiro aprendi muitas coisas que me ajudaram em vários momentos, como, uso de entidades, login externo usando o Facebook entre outros. O Barbearia Pinheiro utiliza o Firebase como banco
+                            de dados para guardar as informações de agendamento.
                         </p>
                     </li>
                 </ul>
@@ -81,14 +70,10 @@
         </aside>
         <footer>
             <div> &copy; Ismael Ribeiro Moura, 2021, Fortaleza - CE - Brasil</div>
-            <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a
-                    href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
-                    href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
-                    target="_blank">CC 3.0 BY</a></div>
-            <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a>
-                from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a
-                    href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0"
-                    target="_blank">CC 3.0 BY</a></div>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+                    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+            <div>Icons made by <a href="https://www.flaticon.com/authors/dave-gandy" title="Dave Gandy">Dave Gandy</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"
+                    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
         </footer>
     </div>
 </body>
